--- a/css/layout.css
+++ b/css/layout.css
@@ -38,7 +38,7 @@ header {
    height: 800px;
    min-height: 500px;
    width: 100%;
-   background: #161415 url(../images/homeScreen.png) no-repeat top center;
+   background: #161415 url(../renderedImages/11.png) no-repeat top center;
    background-size: cover !important;
 	-webkit-background-size: cover !important;
    text-align: center;
